package club.supreme.message.enums;

public enum HandlerType {
    RATELIMITER,
    DEDUPLICATOR,
    PROVIDER
}