package club.supreme.message.enums;

public enum ProviderType {
    TENCENT_SMS,
    ALI_SMS,
    DISCORD_CHAT,
    OUTLOOK_EMAIL
}