package club.supreme.message.model;

import lombok.Data;

@Data
public class DeduplicatorConfig {
    private String timespan;
}