package club.supreme.message.provider;

import club.supreme.message.model.MsgSendLog;

public class OutlookEmailProvider extends AbstractEmailProvider {
    protected void doSend(MsgSendLog msgSendLog) {
        // Send the message using Outlook Email provider
    }
}