package club.supreme.message.queue;

import club.supreme.message.service.LogService;

public class MessageListener {
    private LogService logService;
    public void onMessage() {
        // Listen for messages and process them using the handler
    }
}